--- a/src/SeasonDisplay.css
+++ b/src/SeasonDisplay.css
@@ -9,3 +9,26 @@
   bottom: 10px;
   right: 10px;
 }
+
+/* find element with className of season-display and winter THEN find the child element */
+.season-display.winter i {
+  color: blue;
+}
+.season-display.summer i {
+  color: red;
+}
+
+.season-display {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.winter {
+  background-color: aliceblue;
+}
+
+.summer {
+  background-color: orange;
+}
